# HuroofAI

./: .env  .gitignore  App.js  ArabicLetterTrainer.js  README.md  _save_model.py  app.config.js  app.json  ensure_audio_file_dependencies  package-lock.json  package.json  requirments.txt  server.js  vercel.json
backend/: .env  README.md  __init__.py  errors.py  pyproject.toml  server.py
backend/api/: routes.py
backend/app/: __init__.py  config.py  database.py  errors.py  main.py  models.py
backend/app/api/: audio.py  deps.py  main.py
backend/app/api/routes/: inference.py  upload.py  utils.py
backend/app/core/: config.py
backend/app/services/: __init__.py  save_model.ipynb  test_model.ipynb
backend/app/services/ml/: __init__.py  _buckwalter.py  model_actions.py  save_model.py  speech_recognition.py
backend/app/services/pretrained/: config.json  tokenizer_config.json  vocab.json
backend/app/utils/: __init__.py  _logger.py  audio.py
backend/config/: env.js
backend/core/: config.py
backend/schemas/: __init__.py  inference.py  upload_record.py
backend/services/: ai.py
backend/utils/: __init__.py  _logger.py  audio.py  model.py
components/: Home.js  ImageItems.js  Letter.js  LetterStyles.js  SplashScreen.js
frontend/: .env  App.js  app.config.js  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json
frontend/navigation/: RootNav.js
frontend/screens/: Home.js  Letter.js  Login.js
model/: model_saving.ipynb  save_model.ipynb  test_model.ipynb
uploads/: kafOut.m4a  raOut.m4a  shiinOut.m4a  siinOut.m4a
(+21 files in other folders)
