[project]
name = "backend"
version = "0.1.0"
description = "API Development of Huroof App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[all]>=0.115.8",
    "levenshtein>=0.26.1",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "soundfile>=0.13.1",
    "sqlmodel>=0.0.22",
    "transformers[torch]>=4.49.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "ANN", # type annotations
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "B008",    # Do not perform function call in argument defaults
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    # "D205",     # 1 blank line required between summary line and description
]

# Docstring settings
[tool.ruff.pydocstyle]
convention = "google"  # Use Google-style docstrings
